--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
+            sudo apt install -y pylint
             python3 -m venv venv
             . venv/bin/activate
             make install
